[package]
name = "zbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.*"
clap = { version = "4.4.*", features = ["derive"] }
curl = "0.4.44"
decorum = "0.3.1"
easy_reader = "0.5.2"
env_logger = "0.10.*"
hostname = "0.3.*"
jsonpath-rust = "0.3.5"
lazy_static = "1.4.0"
lexical-core = "0.8.5"
log = "0.4.*"
logos = "0.13.0"
markov-chain = "0.1.1"
neofiglet = "0.1.*"
parse_datetime = "0.5.*"
rand = "0.8.5"
reqwest = { version="0.11.*", features= ["blocking", "json"] }
rhai-dylib = "0.1.12"
rhai-fs = "0.1.3"
rhai-ml = "0.1.1"
rhai-rand = "0.1.6"
rhai-sci = "0.2.0"
rhai-url = "0.0.5"
rust_search = "2.1.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version="1.0.*", default-features = true }
statrs = "0.16.0"
ta = "0.5.0"
tokio = { version="1.34.*", features = ["full", "time"] }
unit-conversions = "0.1.13"
zenoh = "0.10.0-rc"

[dependencies.rhai]
version = "1.16.*"
features = [
  "std",
  "serde",
  "decimal",
  "internals",
]
