[package]
name = "zbus"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary_rw = "4.0.*"
charabia = "0.8.5"
chrono = "0.4.*"
clap = { version = "4.4.*", features = ["derive"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"
curl = "0.4.*"
decorum = "0.3.*"
distance = "0.4.*"
duct_sh = "0.13.*"
easy_reader = "0.5.*"
env_logger = "0.10.*"
fancy-regex = "0.13.*"
fsio = "0.4.*"
fuzzy-matcher = "0.3.*"
gmp-mpfr-sys = "1.6.2"
grok = "2.0.0"
hostname = "0.3.*"
inari = "1.1.0"
is-url = "1.0.*"
iset = "0.2.2"
jsonpath-rust = "0.3.*"
lazy_static = "1.4.*"
lexical-core = "0.8.5"
log = "0.4.*"
logos = "0.13.0"
logwatcher = "0.1.1"
markov-chain = "0.1.1"
maver = "0.1.0"
neofiglet = "0.1.*"
os_pipe = "1.1.5"
parse_datetime = "0.5.*"
proctitle = "0.1.1"
prometheus-parse = "0.2.*"
rand = "0.8.5"
reqwest = { version="0.11.*", features= ["blocking", "json"] }
rhai-dylib = "0.1.*"
rhai-fs = "0.1.*"
rhai-ml = "0.1.1"
rhai-rand = "0.1.*"
rhai-sci = "0.2.*"
rhai-url = "0.0.5"
rust-lapper = "1.1.0"
rust_search = "2.1.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version="1.0.*", default-features = true }
ssh = "0.1.*"
statrs = "0.16.0"
sudo = "0.6.0"
ta = "0.5.0"
thread-manager = "1.0.0"
tiny_http = "0.12.*"
tokio = { version="1.34.*", features = ["full", "time"] }
unit-conversions = "0.1.*"
voca_rs = "1.15.*"
zenoh = "0.10.1-rc"

[dependencies.rhai]
version = "1.16.*"
features = [
  "std",
  "serde",
  "decimal",
  "internals",
]
